Update travis to use https rustup.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ script:
   - cargo build --verbose && cargo test --verbose
   - cargo doc --verbose && mv target/doc doc
 after_script:
-  - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
+  - curl https://static.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
