--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
+language: rust
+sudo: false
+script:
+- cargo build --verbose && cargo test --verbose
+- cargo doc --verbose
+after_success:
+- test "$TRAVIS_PULL_REQUEST" == false && test "$TRAVIS_BRANCH" == "master" && bash deploy-docs.sh
 env:
   global:
-    - secure: PA6Wz6hKm/CPwW6LG6wSWf9Ll3qZwZb0VzJw7G2ndLAeylyyyiJPNviVRwuVCVpZNQ/2Zb+1/f5b3y+GshSbWfcbt6TOguQKjHaZuoXTXp+D7upx3PJpApvyMN0kO59Oiq5QXVvkdjLFPR9US4T0uhjY/LFYxs5lipdbFPXimOw=
-install:
-  - curl https://static.rust-lang.org/rustup.sh | sudo sh -
-script:
-  - cargo build --verbose && cargo test --verbose
-  - cargo doc --verbose && mv target/doc doc
-after_script:
-  - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
+    secure: fcLpQS5vhp6yLmno8IZMatavq03+CuS17Ec4b2Mqjz/pdeg//HTdjGV02VJP2/vzOHz11kMGdUdETWYvps06G3T9hypGWqCLliehzlkrG57gYKLnky89rILetCKzdS63h9VD8LU9dxoZdfcHZpfG/IM7CCKOyaZ4scGtEAs5N14=
