Update to (90cc83015 2015-04-22) (built 2015-04-23).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ name = "spellck_standalone"
 
 [dependencies.stem]
 git = "https://github.com/mrordinaire/rust-stem"
+
+#[dependencies]
+#getopts = "0.2"
